fix: アドブロック回避のため広告枠のクラス名を変更

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,9 @@
     </div>
 
     <!-- 広告枠（AdSense審査後に差し替え） -->
-    <div class="ad-container">
-      <div class="ad-placeholder">
+    <!-- 広告枠（AdSense審査後に差し替え） -->
+    <div class="sponsor-container">
+      <div class="sponsor-placeholder">
         <span>広告枠</span>
       </div>
     </div>
